fixing mobile navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ li, a {
         position: fixed;
         inset: 0 0 0 65%;
         display: flex;
-        padding: min(15vh, 10rem) 1rem;
+        padding: min(15vh, 10rem) clamp(1.5rem, -1.597rem + 8.399vw, 3.5rem);
         flex-direction: column;
         transform: translateX(100%);
         transition: transform 150ms ease-out;
@@ -357,7 +357,7 @@ li, a {
     }
 
     header {
-        padding: 2.5% 7.5%;
+        padding: 2% 7.5%;
     }
  
     .wrapper {
